k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mux-api
  namespace: mux-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mux-api
  template:
    metadata:
      labels:
        app: mux-api
    spec:
      automountServiceAccountToken: false
      containers:
      - name: mux-api
        image: registry.gitlab.com/bobymcbobs/go-mux-vuejs-buefy-typescript-cloud-template:latest
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 20
