k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mux-api
  namespace: mux-api
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: mux-api
