k8s-manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mux-api
  namespace: mux-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - "mydomain.com"
    secretName: letsencrypt-prod
  rules:
  - host: mydomain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mux-api
          servicePort: 8080
